src/test/deca/syntax/invalid/created/matherror/affectation3.deca
// Description :
// double virgule.
//
// Resultats :
// ## TEST LEX : OK
// ## TEST SYN : Ligne 9 : missing IDENT at '.'

{
    float x = 1..2;
}
